--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="particles-container">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+    </div>
+    
     <div class="container">
         <header>
             <h1 class="main-title">Senior Advisory Games!</h1>
@@ -16,7 +39,8 @@
             <nav class="games-list">
                 <h2>Choose a Game</h2>
                 <ul>
-                    <li><a href="taboo.html" class="game-link">Taboo</a></li>
+                    <li><a href="taboo.html" class="game-link">Taboo/Heads Up</a></li>
+                    <li><a href="wheel.html" class="game-link">Wheel of Fortun (WIP)</a></li>
                 </ul>
             </nav>
         </main>
