--- a/wheel.html
+++ b/wheel.html
@@ -10,7 +10,7 @@
     <div class="container">
         <a href="index.html" class="back-link">Back to Games</a>
         
-        <div class="game-container">
+        <div class="game-container wheel">
             <h1>Wheel of Fortune</h1>
             
             <!-- Setup Screen -->
