--- a/taboo.html
+++ b/taboo.html
@@ -10,7 +10,7 @@
     <div class="container">
         <a href="index.html" class="back-link">Back to Games</a>
         
-        <div class="game-container taboo">
+        <div class="game-container">
             <h1>Taboo/Heads Up</h1>
             
             <!-- Setup Screen -->
